# aegis

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  conftest.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
agents/: evidence_collector_agent.py  intake_agent.py  orchestrator.py  reviewer_agent.py  state.py  strategy_agent.py  writer_agent.py
api/: main.py  schemas.py
api/routes/: disputes.py  health.py
data/: reason_codes.json
frontend/: app.js  index.html  styles.css
tests/evals/: eval_results.json  eval_scenarios.py
tests/unit/: test_evidence_agent.py  test_intake_agent.py  test_reviewer_agent.py  test_strategy_agent.py  test_writer_agent.py
tools/: auth_history.py  cardholder_comms.py  delivery_proof.py  device_fingerprint.py  document_generator.py  order_lookup.py  reason_code_rules.py
